--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@
     </header>
 
     <div class="cards-row">
-
       <div class="flip-card">
         <div class="flip-card-inner">
           <div class="flip-card-front">
@@ -60,19 +59,19 @@
 
     <footer>
       <div class="socials">
-        <a href="https://www.facebook.com/sakxam.gupta.92" class="icon facebook" title="Facebook">
+        <a href="https://www.facebook.com/sakxam.gupta.92" class="icon facebook" target="_blank" title="Facebook">
           <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/facebook.svg" alt="Facebook" />
         </a>
-        <a href="https://www.instagram.com/___gupta___sonu/" class="icon instagram" title="Instagram">
+        <a href="https://www.instagram.com/___gupta___sonu/" class="icon instagram" target="_blank" title="Instagram">
           <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/instagram.svg" alt="Instagram" />
         </a>
-        <a href="https://github.com/creationsbysonu" class="icon github" title="GitHub">
+        <a href="https://github.com/creationsbysonu" class="icon github" target="_blank" title="GitHub">
           <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/github.svg" alt="GitHub" />
         </a>
-        <a href="https://www.linkedin.com/in/sonu-gupta-681329340/" class="icon linkedin" title="LinkedIn">
+        <a href="https://www.linkedin.com/in/sonu-gupta-681329340/" class="icon linkedin" target="_blank" title="LinkedIn">
           <img src="https://cdn.jsdelivr.net/gh/simple-icons/simple-icons/icons/linkedin.svg" alt="LinkedIn" />
         </a>
-        <a href="https://guptasonu.com.np/" class="icon portfolio" title="Portfolio">
+        <a href="https://guptasonu.com.np/" class="icon portfolio" target="_blank" title="Portfolio">
           <img src="user_png.png" alt="Portfolio" />
         </a>
       </div>
